fix flexwrap resulting in simple card layout

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,53 +19,50 @@ html {
 /*Revisit what's needed in header and footer since parent inherit*
 Added display:inherit to over-ride user agent stylesheet*/
 body {
-    width: 100%;
-    margin: 0;
-    padding: 0%;
-    align-content:center;
-    background-color: var(--aquaforest);
+    width: 96%;
+    margin: 2%;
+    padding: 0;
+    /align-content:center;
+    background-color:var(--aquaforest);
 }
 
 h1 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 6rem;
-    line-height: auto;
-    margin: 1rem;
-    display: inline;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 5vw;
+    line-height:auto;
+    margin:1rem;
+    display:inline;
 }
 
 /*Add override for user-agent stylesheet to allow flex-wrap*/
 p, h2 {
     display:inherit;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    line-height: 1rem;
-    margin: 3rem 0 1rem 0;
-    font-size: x-large;
-
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height:5rem;
+    margin:3rem 0 1rem 0;
+    font-size:3vw;
 }
 /*Later, consider combining padding width and margin*/
 header {
-    width: 100%;
-    margin: 0px;
-    padding: 1rem 0 1rem 0;
-    display: block;
-    flex-wrap: wrap;
+    width:100%;
+    margin:0px;
+    padding:1rem 0 1rem 0;
+    display:block;
     background-color: var(--swiss-coffee);
 }
 
 nav {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: var(--trout);
     color:linen;
     list-style-type: none;
     padding: 0;
     text-align: center;
     line-height: 5rem; 
-    position: relative;
-    bottom: -15px; 
+    /position: relative;
+    /bottom: 0px; 
     width: 100%;
- 
-}
+ }
 
 .nav-tags {
     color: var(--swiss-coffee);
@@ -75,18 +72,9 @@ nav {
     padding: 20px;
 }
 
-/*Fill full width with color unsuccessful*/
-ul {
-    /padding-inline-start: 0px;
-    /margin-inline-start:0px;
-    /margin-block-start: 0rem;
-}
-
-
-
 /*Add footer elements, may not be needed*/
 footer {
-    width: 96%;
+    width: 100%;
     margin: 0;
     padding: 0%;
 }
@@ -106,9 +94,8 @@ footer {
 .flex-container {
     display: flex;
     flex-wrap: wrap;
-    margin-left: 0rem;
-    margin-right: 0rem;
-    /background-color: hsl(140, 69%, 41%);
+    margin-left: -1rem;
+    margin-right: -1rem;
     justify-content:space-around;
     
 
@@ -130,29 +117,32 @@ footer {
 .card-column {
     display:flex;
     flex: 1 0 100%;
-    /background-color: var(--trout);
-    margin: 2rem;
+    background-color: var(--trout);
+    margin: 1rem;
     padding: 0rem;
 }
+
 
 .card-body {
     display: flex;
     flex-direction: column;
     /position: relative;
     /justify-content: center;
-    /width: 100%;
+    width: 100%;
     /min-height: 100%;    
     /border-color:black;
     /border:black solid 1px;
-    background-color: #332f2f;
-    padding: 5rem 10rem;
+    background-color:var(--swiss-coffee);
+    padding: 5% 10%;
 }
+
+
 
 .card-image {
     width: 100%;
-    min-height: 100%;
+    /min-height: 100%;
     position:relative;
-    /top: -70%;
+    bottom:0%;
     /left: 0%;
     /border: 20px;
     /border-color: black;
@@ -160,14 +150,17 @@ footer {
 
 }
 
+
 .card-footer {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: var(--neptune);
-    color: var(--bonjour);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color:var(--trout);
+    color:var(--swiss-coffee);
     line-height: 3rem;
     position: relative;
-    top: -70%;
-    margin: -4rem 0 -2rem 0;
+    top:%;
+    margin:-4rem 0 -2rem 0;
+    width:100%;
+    padding:5% 5% 5% 5%;
 }
 
 /*Add avatar logo in header float right*/
@@ -189,6 +182,7 @@ footer {
     .card-column {
         flex: 0 0 50%;
         max-width: 50%;
+    }
 }
     
 @media screen and (min-width: 992px) {
